Bug 1416170 - Don't use long double constants. r=njn

Some platforms (at least powerpc64) apparently can't handle long double
constants. So use double constants instead.